<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" >

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
        <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/name_text"
                android:textAlignment="center"
                style="@style/NameStyle"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nickname_edit" android:hint="@string/whats_your_name" style="@style/NameStyle"
                android:textAlignment="center"/>
        <Button
                android:text="@string/done"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:id="@+id/done_button"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nickname_text"
                style="@style/NameStyle"
                android:visibility="gone"
                />
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/btn_star_big_on"
                android:id="@+id/imageView"
                android:contentDescription="@string/yellow_star"
                android:layout_marginTop="@dimen/layout_margin"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/bio_scroll">

            <TextView
                    android:text="@string/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/bio_test" style="@style/NameStyle"
                    android:paddingStart="@dimen/padding" android:paddingEnd="@dimen/padding"/>
        </ScrollView>
    </LinearLayout>

</layout>